[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://MonsterGenerator2D.gd" type="Script" id=2]
[ext_resource path="res://MonsterTrainer2D.tscn" type="PackedScene" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="MonsterGenerator2D" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 2 )

[node name="PasswordLineEdit" type="LineEdit" parent="MonsterGenerator2D"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 220.0
margin_right = 420.0
margin_bottom = 24.0
text = "Enter password"
align = 1
max_length = 30
expand_to_text_length = true
clear_button_enabled = true

[node name="SubmitPasswordButton" type="Button" parent="MonsterGenerator2D"]
margin_left = 220.0
margin_top = 28.0513
margin_right = 420.0
margin_bottom = 48.0513
text = "Submit password"

[node name="TestLabel" type="Label" parent="MonsterGenerator2D"]
margin_left = 221.0
margin_top = 52.7226
margin_right = 420.0
margin_bottom = 73.7226

[node name="VITLabel" type="Label" parent="MonsterGenerator2D"]
margin_left = 221.0
margin_top = 75.0
margin_right = 293.0
margin_bottom = 89.0
text = "VIT"

[node name="MNALabel" type="Label" parent="MonsterGenerator2D"]
margin_left = 221.0
margin_top = 91.0
margin_right = 297.0
margin_bottom = 105.0
text = "MNA"

[node name="STRLabel" type="Label" parent="MonsterGenerator2D"]
margin_left = 221.0
margin_top = 107.0
margin_right = 297.0
margin_bottom = 121.0
text = "STR"

[node name="DEFLabel" type="Label" parent="MonsterGenerator2D"]
margin_left = 221.0
margin_top = 122.0
margin_right = 290.0
margin_bottom = 136.0
text = "DEF"

[node name="SPDLabel" type="Label" parent="MonsterGenerator2D"]
margin_left = 221.0
margin_top = 138.0
margin_right = 289.0
margin_bottom = 152.0
text = "SPD"

[node name="MonsterTrainer2D" parent="." instance=ExtResource( 3 )]

[connection signal="submitted" from="MonsterGenerator2D" to="." method="_on_MonsterGenerator2D_submitted"]
[connection signal="pressed" from="MonsterGenerator2D/SubmitPasswordButton" to="MonsterGenerator2D" method="_on_SubmitPasswordButton_pressed"]

[editable path="MonsterTrainer2D"]
